force-app/main/default/objects/RDPricingTempTestPriceQty__c/RDPricingTempTestPriceQty__c.object-meta.xml
<CustomObject>
    <label>RDPricingTempTestPriceQty</label>
    <nameField>
        <label>RDPricingTempTestPriceQty</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RDPricingTempTestPriceQty</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>