force-app/main/default/objects/RDPricingTempTestPriceQty__c/fields/OrderQtyLL__c.field-meta.xml
<CustomField>
    <fullName>OrderQtyLL__c</fullName>
    <label>OrderQtyLL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>