force-app/main/default/objects/RDPricingTempTestPriceQty__c/fields/OrderQtyUL__c.field-meta.xml
<CustomField>
    <fullName>OrderQtyUL__c</fullName>
    <label>OrderQtyUL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>