force-app/main/default/objects/RDPricingTempTestPriceQty__c/fields/PriceQty__c.field-meta.xml
<CustomField>
    <fullName>PriceQty__c</fullName>
    <label>PriceQty</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>