force-app/main/default/objects/RDPricingTempTestPriceQty__c/fields/Temp_1__c.field-meta.xml
<CustomField>
    <fullName>Temp_1__c</fullName>
    <label>Temp&gt;=</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>