force-app/main/default/objects/RDPricingTempTestPriceQty__c/fields/Temp__c.field-meta.xml
<CustomField>
    <fullName>Temp__c</fullName>
    <label>Temp&lt;=</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>