force-app/main/default/objects/RDPricingTempTestPriceQty__c/fields/TMPTSTASME__c.field-meta.xml
<CustomField>
    <fullName>TMPTSTASME__c</fullName>
    <label>TMPTSTASME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>